# Kinect-v2-Tutorial

./: README.md
Samples/: CMakeLists.txt  align_DepthImgtoRgbImage.cpp  camera_calibration.cpp  fast_capture_100_frames.cpp  generate_pointcloud_from_depthimage.cpp  kinect_continuous_acquisition.cpp  sdk_pointcloud.cpp
Tutorial/: 编程环境配置.md
